// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page Link control data { type: 'CALL_PHONE', payload: [Object] }: resolvedValue 1`] = `
{
  "href": "tel:555-555-5555",
}
`;

exports[`Page Link control data { type: 'CALL_PHONE', payload: [Object] }: snapshot 1`] = `
{
  "cacheData": {
    "apiResources": {},
    "localizedResourcesMap": {},
  },
  "document": {
    "data": {
      "key": "00000000-0000-0000-0000-000000000000",
      "props": {
        "children": {
          "columns": [
            {
              "deviceId": "desktop",
              "value": {
                "count": 12,
                "spans": [
                  [
                    12,
                  ],
                ],
              },
            },
          ],
          "elements": [
            {
              "key": "11111111-1111-1111-1111-111111111111",
              "props": {
                "propKey": {
                  "payload": {
                    "phoneNumber": "555-555-5555",
                  },
                  "type": "CALL_PHONE",
                },
              },
              "type": "TestComponent",
            },
          ],
        },
      },
      "type": "./components/Root/index.js",
    },
    "fonts": [],
    "id": "test-page-id",
    "locale": null,
    "localizedPages": [],
    "meta": {},
    "seo": {},
    "site": {
      "id": "test-site-id",
    },
    "snippets": [],
  },
}
`;

exports[`Page Link control data { type: 'OPEN_URL', payload: [Object] }: resolvedValue 1`] = `
{
  "href": "https://example.com",
  "target": "_self",
}
`;

exports[`Page Link control data { type: 'OPEN_URL', payload: [Object] }: snapshot 1`] = `
{
  "cacheData": {
    "apiResources": {},
    "localizedResourcesMap": {},
  },
  "document": {
    "data": {
      "key": "00000000-0000-0000-0000-000000000000",
      "props": {
        "children": {
          "columns": [
            {
              "deviceId": "desktop",
              "value": {
                "count": 12,
                "spans": [
                  [
                    12,
                  ],
                ],
              },
            },
          ],
          "elements": [
            {
              "key": "11111111-1111-1111-1111-111111111111",
              "props": {
                "propKey": {
                  "payload": {
                    "openInNewTab": false,
                    "url": "https://example.com",
                  },
                  "type": "OPEN_URL",
                },
              },
              "type": "TestComponent",
            },
          ],
        },
      },
      "type": "./components/Root/index.js",
    },
    "fonts": [],
    "id": "test-page-id",
    "locale": null,
    "localizedPages": [],
    "meta": {},
    "seo": {},
    "site": {
      "id": "test-site-id",
    },
    "snippets": [],
  },
}
`;

exports[`Page Link control data { type: 'SCROLL_TO_ELEMENT', payload: [Object] }: resolvedValue 1`] = `
{
  "href": "#",
}
`;

exports[`Page Link control data { type: 'SCROLL_TO_ELEMENT', payload: [Object] }: snapshot 1`] = `
{
  "cacheData": {
    "apiResources": {},
    "localizedResourcesMap": {},
  },
  "document": {
    "data": {
      "key": "00000000-0000-0000-0000-000000000000",
      "props": {
        "children": {
          "columns": [
            {
              "deviceId": "desktop",
              "value": {
                "count": 12,
                "spans": [
                  [
                    12,
                  ],
                ],
              },
            },
          ],
          "elements": [
            {
              "key": "11111111-1111-1111-1111-111111111111",
              "props": {
                "propKey": {
                  "payload": {
                    "block": "start",
                    "elementIdConfig": {
                      "elementKey": "key",
                      "propName": "prop",
                    },
                  },
                  "type": "SCROLL_TO_ELEMENT",
                },
              },
              "type": "TestComponent",
            },
          ],
        },
      },
      "type": "./components/Root/index.js",
    },
    "fonts": [],
    "id": "test-page-id",
    "locale": null,
    "localizedPages": [],
    "meta": {},
    "seo": {},
    "site": {
      "id": "test-site-id",
    },
    "snippets": [],
  },
}
`;

exports[`Page Link control data { type: 'SEND_EMAIL', payload: [Object] }: resolvedValue 1`] = `
{
  "href": "mailto:bob@gmail.com?subject=hello&body=world",
}
`;

exports[`Page Link control data { type: 'SEND_EMAIL', payload: [Object] }: snapshot 1`] = `
{
  "cacheData": {
    "apiResources": {},
    "localizedResourcesMap": {},
  },
  "document": {
    "data": {
      "key": "00000000-0000-0000-0000-000000000000",
      "props": {
        "children": {
          "columns": [
            {
              "deviceId": "desktop",
              "value": {
                "count": 12,
                "spans": [
                  [
                    12,
                  ],
                ],
              },
            },
          ],
          "elements": [
            {
              "key": "11111111-1111-1111-1111-111111111111",
              "props": {
                "propKey": {
                  "payload": {
                    "body": "world",
                    "subject": "hello",
                    "to": "bob@gmail.com",
                  },
                  "type": "SEND_EMAIL",
                },
              },
              "type": "TestComponent",
            },
          ],
        },
      },
      "type": "./components/Root/index.js",
    },
    "fonts": [],
    "id": "test-page-id",
    "locale": null,
    "localizedPages": [],
    "meta": {},
    "seo": {},
    "site": {
      "id": "test-site-id",
    },
    "snippets": [],
  },
}
`;

exports[`Page Link control data OPEN_PAGE for locale fr-FR fetches pathname slice when not in cache: resolvedValue 1`] = `
{
  "href": "/fr-FR/test-localized-pathname",
  "target": "_self",
}
`;

exports[`Page Link control data OPEN_PAGE for locale fr-FR fetches pathname slice when not in cache: snapshot 1`] = `
{
  "cacheData": {
    "apiResources": {},
    "localizedResourcesMap": {},
  },
  "document": {
    "data": {
      "key": "00000000-0000-0000-0000-000000000000",
      "props": {
        "children": {
          "columns": [
            {
              "deviceId": "desktop",
              "value": {
                "count": 12,
                "spans": [
                  [
                    12,
                  ],
                ],
              },
            },
          ],
          "elements": [
            {
              "key": "11111111-1111-1111-1111-111111111111",
              "props": {
                "propKey": {
                  "payload": {
                    "openInNewTab": false,
                    "pageId": "[test-page-id]",
                  },
                  "type": "OPEN_PAGE",
                },
              },
              "type": "TestComponent",
            },
          ],
        },
      },
      "type": "./components/Root/index.js",
    },
    "fonts": [],
    "id": "test-page-id",
    "locale": "fr-FR",
    "localizedPages": [],
    "meta": {},
    "seo": {},
    "site": {
      "id": "test-site-id",
    },
    "snippets": [],
  },
}
`;

exports[`Page Link control data OPEN_PAGE for locale fr-FR renders page link when page pathname slice is in cache: resolvedValue 1`] = `
{
  "href": "/fr-FR/test-localized-pathname",
  "target": "_self",
}
`;

exports[`Page Link control data OPEN_PAGE for locale fr-FR renders page link when page pathname slice is in cache: snapshot 1`] = `
{
  "cacheData": {
    "apiResources": {
      "PagePathnameSlice": [
        {
          "id": "[test-page-id]",
          "locale": "fr-FR",
          "value": {
            "__typename": "PagePathnameSlice",
            "basePageId": "[test-base-page-id]",
            "id": "[test-page-id]",
            "pathname": "fr-FR/test-localized-pathname",
          },
        },
      ],
    },
    "localizedResourcesMap": {},
  },
  "document": {
    "data": {
      "key": "00000000-0000-0000-0000-000000000000",
      "props": {
        "children": {
          "columns": [
            {
              "deviceId": "desktop",
              "value": {
                "count": 12,
                "spans": [
                  [
                    12,
                  ],
                ],
              },
            },
          ],
          "elements": [
            {
              "key": "11111111-1111-1111-1111-111111111111",
              "props": {
                "propKey": {
                  "payload": {
                    "openInNewTab": false,
                    "pageId": "[test-page-id]",
                  },
                  "type": "OPEN_PAGE",
                },
              },
              "type": "TestComponent",
            },
          ],
        },
      },
      "type": "./components/Root/index.js",
    },
    "fonts": [],
    "id": "test-page-id",
    "locale": "fr-FR",
    "localizedPages": [],
    "meta": {},
    "seo": {},
    "site": {
      "id": "test-site-id",
    },
    "snippets": [],
  },
}
`;

exports[`Page Link control data OPEN_PAGE for locale fr-FR resolves default link attributes when unable to find pathname slice: resolvedValue 1`] = `
{
  "href": "#",
  "target": "_self",
}
`;

exports[`Page Link control data OPEN_PAGE for locale fr-FR resolves default link attributes when unable to find pathname slice: snapshot 1`] = `
{
  "cacheData": {
    "apiResources": {
      "PagePathnameSlice": [
        {
          "id": "[test-page-id]",
          "locale": "fr-FR",
          "value": null,
        },
      ],
    },
    "localizedResourcesMap": {},
  },
  "document": {
    "data": {
      "key": "00000000-0000-0000-0000-000000000000",
      "props": {
        "children": {
          "columns": [
            {
              "deviceId": "desktop",
              "value": {
                "count": 12,
                "spans": [
                  [
                    12,
                  ],
                ],
              },
            },
          ],
          "elements": [
            {
              "key": "11111111-1111-1111-1111-111111111111",
              "props": {
                "propKey": {
                  "payload": {
                    "openInNewTab": false,
                    "pageId": "[test-page-id]",
                  },
                  "type": "OPEN_PAGE",
                },
              },
              "type": "TestComponent",
            },
          ],
        },
      },
      "type": "./components/Root/index.js",
    },
    "fonts": [],
    "id": "test-page-id",
    "locale": "fr-FR",
    "localizedPages": [],
    "meta": {},
    "seo": {},
    "site": {
      "id": "test-site-id",
    },
    "snippets": [],
  },
}
`;

exports[`Page Link control data OPEN_PAGE for locale null fetches pathname slice when not in cache: resolvedValue 1`] = `
{
  "href": "/test-pathname",
  "target": "_self",
}
`;

exports[`Page Link control data OPEN_PAGE for locale null fetches pathname slice when not in cache: snapshot 1`] = `
{
  "cacheData": {
    "apiResources": {},
    "localizedResourcesMap": {},
  },
  "document": {
    "data": {
      "key": "00000000-0000-0000-0000-000000000000",
      "props": {
        "children": {
          "columns": [
            {
              "deviceId": "desktop",
              "value": {
                "count": 12,
                "spans": [
                  [
                    12,
                  ],
                ],
              },
            },
          ],
          "elements": [
            {
              "key": "11111111-1111-1111-1111-111111111111",
              "props": {
                "propKey": {
                  "payload": {
                    "openInNewTab": false,
                    "pageId": "[test-page-id]",
                  },
                  "type": "OPEN_PAGE",
                },
              },
              "type": "TestComponent",
            },
          ],
        },
      },
      "type": "./components/Root/index.js",
    },
    "fonts": [],
    "id": "test-page-id",
    "locale": null,
    "localizedPages": [],
    "meta": {},
    "seo": {},
    "site": {
      "id": "test-site-id",
    },
    "snippets": [],
  },
}
`;

exports[`Page Link control data OPEN_PAGE for locale null renders page link when page pathname slice is in cache: resolvedValue 1`] = `
{
  "href": "/test-pathname",
  "target": "_self",
}
`;

exports[`Page Link control data OPEN_PAGE for locale null renders page link when page pathname slice is in cache: snapshot 1`] = `
{
  "cacheData": {
    "apiResources": {
      "PagePathnameSlice": [
        {
          "id": "[test-page-id]",
          "locale": null,
          "value": {
            "__typename": "PagePathnameSlice",
            "id": "[test-page-id]",
            "pathname": "test-pathname",
          },
        },
      ],
    },
    "localizedResourcesMap": {},
  },
  "document": {
    "data": {
      "key": "00000000-0000-0000-0000-000000000000",
      "props": {
        "children": {
          "columns": [
            {
              "deviceId": "desktop",
              "value": {
                "count": 12,
                "spans": [
                  [
                    12,
                  ],
                ],
              },
            },
          ],
          "elements": [
            {
              "key": "11111111-1111-1111-1111-111111111111",
              "props": {
                "propKey": {
                  "payload": {
                    "openInNewTab": false,
                    "pageId": "[test-page-id]",
                  },
                  "type": "OPEN_PAGE",
                },
              },
              "type": "TestComponent",
            },
          ],
        },
      },
      "type": "./components/Root/index.js",
    },
    "fonts": [],
    "id": "test-page-id",
    "locale": null,
    "localizedPages": [],
    "meta": {},
    "seo": {},
    "site": {
      "id": "test-site-id",
    },
    "snippets": [],
  },
}
`;

exports[`Page Link control data OPEN_PAGE for locale null resolves default link attributes when unable to find pathname slice: resolvedValue 1`] = `
{
  "href": "#",
  "target": "_self",
}
`;

exports[`Page Link control data OPEN_PAGE for locale null resolves default link attributes when unable to find pathname slice: snapshot 1`] = `
{
  "cacheData": {
    "apiResources": {
      "PagePathnameSlice": [
        {
          "id": "[test-page-id]",
          "locale": null,
          "value": null,
        },
      ],
    },
    "localizedResourcesMap": {},
  },
  "document": {
    "data": {
      "key": "00000000-0000-0000-0000-000000000000",
      "props": {
        "children": {
          "columns": [
            {
              "deviceId": "desktop",
              "value": {
                "count": 12,
                "spans": [
                  [
                    12,
                  ],
                ],
              },
            },
          ],
          "elements": [
            {
              "key": "11111111-1111-1111-1111-111111111111",
              "props": {
                "propKey": {
                  "payload": {
                    "openInNewTab": false,
                    "pageId": "[test-page-id]",
                  },
                  "type": "OPEN_PAGE",
                },
              },
              "type": "TestComponent",
            },
          ],
        },
      },
      "type": "./components/Root/index.js",
    },
    "fonts": [],
    "id": "test-page-id",
    "locale": null,
    "localizedPages": [],
    "meta": {},
    "seo": {},
    "site": {
      "id": "test-site-id",
    },
    "snippets": [],
  },
}
`;

exports[`Page Link control data SCROLL_TO_ELEMENT resolves default link attributes when elementIdConfig is not provided: resolvedValue 1`] = `
{
  "href": "#",
}
`;

exports[`Page Link control data SCROLL_TO_ELEMENT resolves default link attributes when elementIdConfig is not provided: snapshot 1`] = `
{
  "cacheData": {
    "apiResources": {},
    "localizedResourcesMap": {},
  },
  "document": {
    "data": {
      "key": "00000000-0000-0000-0000-000000000000",
      "props": {
        "children": {
          "columns": [
            {
              "deviceId": "desktop",
              "value": {
                "count": 12,
                "spans": [
                  [
                    12,
                  ],
                ],
              },
            },
          ],
          "elements": [
            {
              "key": "11111111-1111-1111-1111-111111111111",
              "props": {
                "propKey": {
                  "payload": {
                    "block": "start",
                    "elementIdConfig": {
                      "elementKey": "key",
                      "propName": "prop",
                    },
                  },
                  "type": "SCROLL_TO_ELEMENT",
                },
              },
              "type": "TestComponent",
            },
          ],
        },
      },
      "type": "./components/Root/index.js",
    },
    "fonts": [],
    "id": "test-page-id",
    "locale": null,
    "localizedPages": [],
    "meta": {},
    "seo": {},
    "site": {
      "id": "test-site-id",
    },
    "snippets": [],
  },
}
`;

exports[`Page Link control data SCROLL_TO_ELEMENT resolves scroll target when element key is on screen: resolvedValue 1`] = `
{
  "href": "#test-element-id",
}
`;

exports[`Page Link control data SCROLL_TO_ELEMENT resolves scroll target when element key is on screen: snapshot 1`] = `
{
  "cacheData": {
    "apiResources": {},
    "localizedResourcesMap": {},
  },
  "document": {
    "data": {
      "key": "00000000-0000-0000-0000-000000000000",
      "props": {
        "children": {
          "columns": [
            {
              "deviceId": "desktop",
              "value": {
                "count": 12,
                "spans": [
                  [
                    12,
                  ],
                  [
                    12,
                  ],
                ],
              },
            },
          ],
          "elements": [
            {
              "key": "11111111-1111-1111-1111-111111111111",
              "props": {
                "propKey": {
                  "payload": {
                    "block": "start",
                    "elementIdConfig": {
                      "elementKey": "key",
                      "propName": "prop",
                    },
                  },
                  "type": "SCROLL_TO_ELEMENT",
                },
              },
              "type": "TestComponent",
            },
            {
              "key": "key",
              "props": {
                "id": "test-element-id",
              },
              "type": "./components/Button/index.js",
            },
          ],
        },
      },
      "type": "./components/Root/index.js",
    },
    "fonts": [],
    "id": "test-page-id",
    "locale": null,
    "localizedPages": [],
    "meta": {},
    "seo": {},
    "site": {
      "id": "test-site-id",
    },
    "snippets": [],
  },
}
`;

exports[`Page Link control data null: resolvedValue 1`] = `
{
  "href": "#",
}
`;

exports[`Page Link control data null: snapshot 1`] = `
{
  "cacheData": {
    "apiResources": {},
    "localizedResourcesMap": {},
  },
  "document": {
    "data": {
      "key": "00000000-0000-0000-0000-000000000000",
      "props": {
        "children": {
          "columns": [
            {
              "deviceId": "desktop",
              "value": {
                "count": 12,
                "spans": [
                  [
                    12,
                  ],
                ],
              },
            },
          ],
          "elements": [
            {
              "key": "11111111-1111-1111-1111-111111111111",
              "props": {
                "propKey": null,
              },
              "type": "TestComponent",
            },
          ],
        },
      },
      "type": "./components/Root/index.js",
    },
    "fonts": [],
    "id": "test-page-id",
    "locale": null,
    "localizedPages": [],
    "meta": {},
    "seo": {},
    "site": {
      "id": "test-site-id",
    },
    "snippets": [],
  },
}
`;
